assets/app.css
/* ... */
.playing .song-playingicon {
  opacity: 1;
}

.song-title {
  font-size: 20px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  line-height: 1.55;
}

.song-artist {
  flex: 1 1 auto;
  opacity: 0.7;
}

.song-track,
.song-artist,
.song-elapsed,
.song-lengthseparator,
.song-length {
  font-size: 12px;
}

.song-track,
.song-title,
.song-artist,
.song-elapsed,
.song-lengthseparator,
.song-length {
  margin: 0 4px;
}

.song-lengthseparator[aria-hidden="true"],
.song-elapsed[aria-hidden="true"] {
  display: none;
}

@media (max-width: 400px), (max-width: 800px) and (orientation: landscape) {
  .song {
    flex-flow: row wrap;
  }

  .song-track,
  .song-lengthseparator,
  .song-length {
    display: none;
  }

  .song-elapsed {
    margin: 0;
  }

  .song-title {
    flex: 1 1 auto;
  }

  .song-artist {
    flex: 0 1 auto;
    order: 10;
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

@media (max-height: 400px) {
  .list-header {
    display: none;
  }
}

.main {
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
  transition: transform 0.5s 0s ease;
}

.main.swipe {
  transition: none;
}

.main-box-text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 100%;
}

.main-box-title {
  font-size: 20px;
}

.main-box-artist {
  font-size: 20px;
}

.main-cover {
  position: relative;
  width: 70%;
  height: 70%;
  flex: 1 0 auto;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.main-cover.circled {
  flex: 0 0 auto;
}

@media (orientation: portrait) {
  .main-cover {
    width: 70vw;
    height: 70vw;
  }
}

@media (orientation: landscape) and (max-aspect-ratio: 2/1) {
  .main-cover {
    width: 35vw;
    height: 35vw;
  }
}

@media (orientation: landscape) and (min-aspect-ratio: 2/1) {
  .main-cover {
    width: 70vh;
    height: 70vh;
  }
}

.main-cover-img {
  position: absolute;
  left: 5%;
  top: 5%;
  width: 90%;
  height: 90%;
  min-height: 10px;
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
  border-radius: 1%;
}

.circled .main-cover-img {
  background-size: cover;
  border-radius: 100%;
}

.main-cover-circle {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  stroke-width: 4;
  visibility: hidden;
}

.circled .main-cover-circle {
  visibility: visible;
}

.main-cover-circle-inactive {
  stroke-opacity: 0.5;
}

@media (orientation: landscape) {
  .system-nav {
    width: 25%;
    display: flex;
    padding: 20px 0;
    flex-direction: column;
    align-items: stretch;
  }

  .system-nav-item {
    height: 40px;
    font-size: 18px;
    text-align: left;
    padding: 0 20px;
    margin: 0 10px;
  }

  .light .system-nav-item {
    color: #404040;
  }

  .dark .system-nav-item {
    color: #e0e0e0;
  }

  .system-nav-item.on {
    border-radius: 2px;
  }

  .light .system-nav-item.on {
    background-color: #404040;
    color: #e0e0e0;
  }

  .dark .system-nav-item.on {
    background-color: #e0e0e0;
    color: #404040;
  }

  .system-article {
    width: 75%;
  }
}

@media (orientation: portrait) {
  .modal-system {
    flex-flow: column nowrap;
  }

  .system-nav {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }

  .system-nav-item {
    padding: 3px 8px;
    color: #e0e0e0;
    font-size: 18px;
    box-sizing: border-box;
    border-style: solid none;
    border-width: 3px;
    height: 36px;
  }

  .light .system-nav-item {
    border-color: #404040;
    color: #404040;
  }

  .dark .system-nav-item {
    border-color: #e0e0e0;
    color: #e0e0e0;
  }

  .system-nav-item:first-child,
  .rtl .system-nav-item:last-child {
    border-style: solid;
    border-radius: 20px 0 0 20px / 20px 0 0 20px;
    padding: 3px 8px 3px 12px;
  }

  .system-nav-item:last-child,
  .rtl .system-nav-item:first-child {
    border-style: solid;
    border-radius: 0 20px 20px 0 / 0 20px 20px 0;
    padding: 3px 12px 3px 8px;
  }

  .light .system-nav-item.on {
    background-color: #404040;
    color: #e0e0e0;
  }

  .dark .system-nav-item.on {
    background-color: #e0e0e0;
    color: #404040;
  }

  .system-article {
    height: calc(100% - 40px);
  }
}

.system-nav-item {
  transition: background-color 0.2s 0s ease, color 0.2s 0s ease;
}

.system-article {
  display: none;
  padding: 10px 0 0 0;
}

.system-article.on {
  display: block;
}

.system-article-sub {
  padding: 0 20px 30px 20px;
}

.system-article-sub-header {
  font-size: 19px;
  padding: 6px 10px;
  margin: 0;
}

.system-settings {
  padding: 0;
  margin: 0;
}

.system-setting {
  align-items: center;
  display: flex;
}

.system-setting-desc {
  font-size: 18px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  flex: 1 1 auto;
  padding: 8px 8px 8px 0;
}

.system-setting-value-expand {
  flex: 1 1 auto;
}

.system-article-sub.hide,
.system-article-sub-header.hide,
.system-setting.hide {
  display: none;
}

.information-list {
  padding: 0 20px;
  margin: 0;
}

.information-box {
  padding: 0 0 16px 0;
}

.license-box {
  display: flex;
  flex-direction: column;
}

.product-name {
  font-size: 18px;
}

.product-version {
  padding: 0 0 0 6px;
  font-size: 12pt;
}

.product-link {
  font-size: 14px;
}

.license-link {
  font-size: 12px;
}

.light .product-version,
.light .product-link,
.light .license-link {
  color: #404040;
}

.dark .product-version,
.dark .product-link,
.dark .license-link {
  color: #c0c0c0;
}

.config-range {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
  appearance: none;
  -webkit-appearance: none;
  height: 30px;
  outline: none;
  background-color: transparent;
}

.config-range:hover {
  cursor: pointer;
}

.config-range::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  appearance: none;
  transition: background-color 0.2s 0s ease;
  border-radius: 4px;
  height: 4px;
}
/* ... */

